var _application_2obj_2_debug_2net7_80_2_protos_2_hand_in_homework_8cs =
[
    [ "gRPCClient.HandInHomework", "classg_r_p_c_client_1_1_hand_in_homework.html", "classg_r_p_c_client_1_1_hand_in_homework" ],
    [ "gRPCClient.RequestCreateHandInHomework", "classg_r_p_c_client_1_1_request_create_hand_in_homework.html", "classg_r_p_c_client_1_1_request_create_hand_in_homework" ],
    [ "gRPCClient.ResponseGetHandInHomework", "classg_r_p_c_client_1_1_response_get_hand_in_homework.html", "classg_r_p_c_client_1_1_response_get_hand_in_homework" ],
    [ "gRPCClient.RequestGetHandInHomework", "classg_r_p_c_client_1_1_request_get_hand_in_homework.html", "classg_r_p_c_client_1_1_request_get_hand_in_homework" ],
    [ "gRPCClient.RequestGetHandInByHomeworkIdAndStudentUsername", "classg_r_p_c_client_1_1_request_get_hand_in_by_homework_id_and_student_username.html", "classg_r_p_c_client_1_1_request_get_hand_in_by_homework_id_and_student_username" ],
    [ "gRPCClient.RequestGetHandInsByHomeworkId", "classg_r_p_c_client_1_1_request_get_hand_ins_by_homework_id.html", "classg_r_p_c_client_1_1_request_get_hand_ins_by_homework_id" ],
    [ "gRPCClient.ResponseGetHandInsByHomeworkId", "classg_r_p_c_client_1_1_response_get_hand_ins_by_homework_id.html", "classg_r_p_c_client_1_1_response_get_hand_ins_by_homework_id" ],
    [ "pb", "_application_2obj_2_debug_2net7_80_2_protos_2_hand_in_homework_8cs.html#a3a8b1403f9034aa88aad1ce2c733db60", null ],
    [ "pbc", "_application_2obj_2_debug_2net7_80_2_protos_2_hand_in_homework_8cs.html#acf353ca81053b715ef0a189df5a75499", null ],
    [ "pbr", "_application_2obj_2_debug_2net7_80_2_protos_2_hand_in_homework_8cs.html#a4c9bca18934bf8b310b9d65812404c69", null ],
    [ "scg", "_application_2obj_2_debug_2net7_80_2_protos_2_hand_in_homework_8cs.html#a6de48d7be2d1c733071a3f897657ee05", null ]
];