var searchData=
[
  ['handinhomework_0',['handinhomework',['../class_domain_1_1_models_1_1_hand_in_homework.html',1,'Domain.Models.HandInHomework'],['../classg_r_p_c_client_1_1_hand_in_homework.html',1,'gRPCClient.HandInHomework']]],
  ['handinhomeworkclient_1',['HandInHomeworkClient',['../class_application_1_1g_r_p_c_clients_1_1_hand_in_homework_client.html',1,'Application::gRPCClients']]],
  ['handinhomeworklogic_2',['HandInHomeworkLogic',['../class_application_1_1_logic_1_1_hand_in_homework_logic.html',1,'Application::Logic']]],
  ['handinhomeworklogictests_3',['HandInHomeworkLogicTests',['../classx_unit_1_1_tests_1_1_hand_in_homework_logic_tests.html',1,'xUnit::Tests']]],
  ['handinhomeworkserviceclient_4',['HandInHomeworkServiceClient',['../classg_r_p_c_client_1_1_hand_in_homework_service_1_1_hand_in_homework_service_client.html',1,'gRPCClient::HandInHomeworkService']]],
  ['handinscontroller_5',['HandInsController',['../class_web_a_p_i_1_1_controllers_1_1_hand_ins_controller.html',1,'WebAPI::Controllers']]],
  ['homework_6',['homework',['../class_domain_1_1_models_1_1_homework.html',1,'Domain.Models.Homework'],['../classg_r_p_c_client_1_1_homework.html',1,'gRPCClient.Homework']]],
  ['homeworkclient_7',['HomeworkClient',['../class_application_1_1g_r_p_c_clients_1_1_homework_client.html',1,'Application::gRPCClients']]],
  ['homeworkcreationdto_8',['HomeworkCreationDTO',['../class_domain_1_1_d_t_os_1_1_homework_d_t_o_1_1_homework_creation_d_t_o.html',1,'Domain::DTOs::HomeworkDTO']]],
  ['homeworkhandindto_9',['HomeworkHandInDTO',['../class_domain_1_1_d_t_os_1_1_homework_d_t_o_1_1_homework_hand_in_d_t_o.html',1,'Domain::DTOs::HomeworkDTO']]],
  ['homeworklogic_10',['HomeworkLogic',['../class_application_1_1_logic_1_1_homework_logic.html',1,'Application::Logic']]],
  ['homeworklogictests_11',['HomeworkLogicTests',['../classx_unit_1_1_tests_1_1_homework_logic_tests.html',1,'xUnit::Tests']]],
  ['homeworkscontroller_12',['HomeworksController',['../class_web_a_p_i_1_1_controllers_1_1_homeworks_controller.html',1,'WebAPI::Controllers']]],
  ['homeworkserviceclient_13',['HomeworkServiceClient',['../classg_r_p_c_client_1_1_homework_service_1_1_homework_service_client.html',1,'gRPCClient::HomeworkService']]]
];
